# sumatradigest

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  releases.yml
src/: digests.rs  main.rs  read.rs
