[package]
name = "sumatradigest"
version = "0.1.0"
author = "Silene"
description = "A Memory-Safe Hash Digest Tool Written In Rust"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsumatracrypt-rs = "0.2.0"
clap = { version = "4.5.11", features = ["derive"] }